# ChangeLog for dev-perl/Debug-Client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Debug-Client/ChangeLog,v 1.1 2010/02/15 12:36:13 tove Exp $

  15 Feb 2010; Torsten Veller <tove@gentoo.org> +Debug-Client-0.11.ebuild,
  +metadata.xml:
  Import to gentoo from perl-experimental

*Debug-Client-0.11 (31 Dec 2009)

  31 Dec 2009; Torsten Veller <tove@gentoo.org> +Debug-Client-0.11.ebuild,
  +metadata.xml:
  Initial commit
