@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Debug-Client
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Debug-Client/ChangeLog,v 1.1 2010/02/15 12:36:13 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Debug-Client/ChangeLog,v 1.2 2011/07/21 18:06:23 tove Exp $
+
+*Debug-Client-0.120.0 (21 Jul 2011)
+
+  21 Jul 2011; Torsten Veller <tove@gentoo.org> +Debug-Client-0.120.0.ebuild:
+  Version bump
 
   15 Feb 2010; Torsten Veller <tove@gentoo.org> +Debug-Client-0.11.ebuild,
   +metadata.xml:
